# dotfiles

./: .Xmodmap  .actrc  .cmake-format.yml  .cmakelintrc  .fix_ssh_agent_keys  .flake8  .gdb_history  .gitignore  .gitlab-ci.yml  .latexmkrc  .my_bashrc  .my_entry  .my_profile  .my_ssh_agent  .mydircolors  .noctrlq.sh  .nvim  .profile  .pylintrc  .set_screen.sh  .set_wallpaper.sh  .tmux.conf  .toggletouchpad.sh  .vimrc  .vimrc.making  .vimrc.old  .ycm_extra_conf.py  README.md  download_and_install.sh  gcc_scripts  kglobalshortcutsrc  kglobalshortcutsrc.kksrc  khotkeysrc  llvm_install.sh  my_profile  quicktile.cfg  set_keyboard.sh  update.sh  us.bk
.github/workflows/: freshInstall.yml
cppStarterTemplate/: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json
cppStarterTemplate/src/: CMakeLists.txt  main.cpp
cpp_project/: .gitignore  new_cpp_project.sh
ftplugin/: cuda.vim  python.vim  tex.vim
i3/: .gitignore  .reset_plasma.sh  config  i3exit  toggletouchpad
i3status/: config
llvm_scripts/: set-debug.sh  set-release.sh
nvim/: .gitignore  Readme.md  init.lua  init.vim  prerequists.txt
nvim.viml/: coc-settings.json  colors
nvim.viml/backup/: 03.coc.vim
nvim.viml/config/: 01.plugins.vim  02.init.vim  03.coc.vim  04.powerline.vim  06.makeToCC.vim  07.neoformat.vim  08.coc-extensions.vim  09.vimtex.vim  10.copilot.vim  11.comment.vim  12.telescope.vim  50.format.vim  99.shortcuts.vim
nvim/config/: 01.coc.vim
nvim/lua/: customFunctions.lua  globals.lua  keymappings.lua  options.lua  plugins.lua
nvim/snippets/: tex.lua
primary.conf/: .my_vars  directories_structure.sh  docker.sh  gcc.sh  llvm.sh  nvidia-docker.sh  quicktile.sh
templates/: CMakeLists.txt  skeleton.cmake  skeleton.tex
vim/: .gitignore  vimrc  vimrc.old
yapf/: style
(+35 files in other folders)
